@@ -94,6 +94,10 @@ protected:
   bool isDisconnected( const SessionID& );
   void connect();
 
+protected:
+  void log( const std::string& text )
+  { if( m_pLog ) m_pLog->onEvent( text ); }
+
 private:
   void initialize() throw ( ConfigError );
 
@@ -128,6 +132,7 @@ private:
   MessageStoreFactory& m_messageStoreFactory;
   SessionSettings m_settings;
   LogFactory* m_pLogFactory;
+  Log* m_pLog;
   bool m_firstPoll;
   bool m_stop;
   Mutex m_mutex;
